--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,7 @@ TRANSMISSIONOPENVPNGUI_ONLYVPN=
 WIRESHARK_PORT=
 ZONEMINDER_PORT=
 ZONEMINDER_WEBSOCKET_PORT=
+PLEX_PORT=
 
 #################### SYSTEM
 
