--- a/docker-compose-nginx-all.yml
+++ b/docker-compose-nginx-all.yml
@@ -73,19 +73,19 @@ services:
       - DNS_SERVER=1.1.1.1
 
   # Cloudflare DDNS - Dynamic DNS Updater
-  blog-cf-ddns:
-    container_name: blog-cf-ddns
-    image: oznu/cloudflare-ddns:latest
-    restart: always
-    security_opt:
-      - no-new-privileges:true
-    environment:
-      - API_KEY=$CLOUDFLARE_API_TOKEN
-      - ZONE=$DOMAINNAME_BLOG
-      - PROXIED=true
-      - RRTYPE=A
-      - DELETE_ON_STOP=false
-      - DNS_SERVER=1.1.1.1
+#  blog-cf-ddns:
+#    container_name: blog-cf-ddns
+#    image: oznu/cloudflare-ddns:latest
+#    restart: always
+#    security_opt:
+#      - no-new-privileges:true
+#    environment:
+#      - API_KEY=$CLOUDFLARE_API_TOKEN
+#      - ZONE=$DOMAINNAME_BLOG
+#      - PROXIED=true
+#      - RRTYPE=A
+#      - DELETE_ON_STOP=false
+#      - DNS_SERVER=1.1.1.1
 
 ############################# SYSTEM
 
@@ -179,7 +179,7 @@ services:
   # Transmission with OpenVpn
   # Setup: https://www.youtube.com/watch?v=aPkRz0U_IPo
   transmission-openvpn:
-    image: haugene/transmission-openvpn #latest-armhf / 2.13-armhf / 3.0.2-armhf
+    image: haugene/transmission-openvpn:3.0.2-armhf #latest-armhf / 2.13-armhf / 3.0.2-armhf
     container_name: transmission-openvpn
     restart: always # If not always, disable WEBPROXY_ENABLED
     networks:
@@ -495,28 +495,28 @@ services:
 ############################# BLOG 30LAMOD.COM
 
   # MariaDB
-  blog_mariadb:
-    container_name: blog_mariadb
-    image: linuxserver/mariadb:latest
-    restart: always
-    networks:
-      - database
-    security_opt:
-      - no-new-privileges:true
-    ports:
-      - "$BLOG_MARIADB_PORT:3306"
-    volumes:
-      - $BLOGDIR/blog_mariadb/data:/config
-      - $BLOGDIR/blog_mariadb/mysql:/var/lib/mysql
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - PUID=$PUID
-      - PGID=$PGID
-      - MYSQL_ROOT_PASSWORD=$MARIADB_BLOG_ROOT_PASSWORD
-      - MYSQL_DATABASE=$WORDPRESS_BLOG_DB_NAME
-      - MYSQL_USER=$WORDPRESS_BLOG_DB_USER
-      - MYSQL_PASSWORD=$WORDPRESS_BLOG_DB_PASSWORD
+#  blog_mariadb:
+#    container_name: blog_mariadb
+#    image: linuxserver/mariadb:latest
+#    restart: always
+#    networks:
+#      - database
+#    security_opt:
+#      - no-new-privileges:true
+#    ports:
+#      - "$BLOG_MARIADB_PORT:3306"
+#    volumes:
+#      - $BLOGDIR/blog_mariadb/data:/config
+#      - $BLOGDIR/blog_mariadb/mysql:/var/lib/mysql
+#      - /etc/timezone:/etc/timezone:ro
+#      - /etc/localtime:/etc/localtime:ro
+#    environment:
+#      - PUID=$PUID
+#      - PGID=$PGID
+#      - MYSQL_ROOT_PASSWORD=$MARIADB_BLOG_ROOT_PASSWORD
+#      - MYSQL_DATABASE=$WORDPRESS_BLOG_DB_NAME
+#      - MYSQL_USER=$WORDPRESS_BLOG_DB_USER
+#      - MYSQL_PASSWORD=$WORDPRESS_BLOG_DB_PASSWORD
 
   # WordPress
     # Create file (volumes) php.conf.uploads.ini and paste below content before container creation:
@@ -525,30 +525,30 @@ services:
     #upload_max_filesize = 64M
     #post_max_size = 64M
     #max_execution_time = 600
-  blog_wordpress:
-    container_name: blog_wordpress
-    image: wordpress:5.6
-    restart: always
-    ports:
-      - $BLOG_WORDPRESS_PORT:80
-    networks:
-      - database
-      - ngproxy
-    security_opt:
-      - no-new-privileges:true
-    links:
-      - blog_mariadb
-    volumes:
-#      - $BLOGDIR/blog_wordpress/config/php.conf.uploads.ini:/usr/local/etc/php/conf.d/uploads.ini # Create file in advance
-      - $BLOGDIR/blog_wordpress/wp-app:/var/www/html # Full wordpress project
-    environment:
-      WORDPRESS_DB_HOST: blog_mariadb
-      WORDPRESS_DB_NAME: $WORDPRESS_BLOG_DB_NAME
-      WORDPRESS_DB_USER: $WORDPRESS_BLOG_DB_USER
-      WORDPRESS_DB_PASSWORD: $WORDPRESS_BLOG_DB_PASSWORD
-    labels:
-      # WatchTower
-      - "com.centurylinklabs.watchtower.monitor-only=true"
+#  blog_wordpress:
+#    container_name: blog_wordpress
+#    image: wordpress:5.6
+#    restart: always
+#    ports:
+#      - $BLOG_WORDPRESS_PORT:80
+#    networks:
+#      - database
+#      - ngproxy
+#    security_opt:
+#      - no-new-privileges:true
+#    links:
+#      - blog_mariadb
+#    volumes:
+##      - $BLOGDIR/blog_wordpress/config/php.conf.uploads.ini:/usr/local/etc/php/conf.d/uploads.ini # Create file in advance
+#      - $BLOGDIR/blog_wordpress/wp-app:/var/www/html # Full wordpress project
+#    environment:
+#      WORDPRESS_DB_HOST: blog_mariadb
+#      WORDPRESS_DB_NAME: $WORDPRESS_BLOG_DB_NAME
+#      WORDPRESS_DB_USER: $WORDPRESS_BLOG_DB_USER
+#      WORDPRESS_DB_PASSWORD: $WORDPRESS_BLOG_DB_PASSWORD
+#    labels:
+#      # WatchTower
+#      - "com.centurylinklabs.watchtower.monitor-only=true"
 
 ############################# HOME
 
