Wireguard easy server

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,8 @@ WIRESHARK_PORT=
 ZONEMINDER_PORT=
 ZONEMINDER_WEBSOCKET_PORT=
 PLEX_PORT=
+WIREGUARD_UDP_PORT=
+WIREGUARD_TCP_PORT=
 
 #################### SYSTEM
 
@@ -54,6 +56,15 @@ OPENVPN_USERNAME=
 OPENVPN_PASSWORD=
 LOCAL_NETWORK=
 OPENVPN_CONFIG_FILES=
+
+#################### WIREGUARD
+
+WIREGUARD_HOST=
+WIREGUARD_UI_PASSWORD=
+WIREGUARD_KEEPALIVE=
+WIREGUARD_DNS=
+WIREGUARD_IP_FORWARD=
+WIREGUARD_ALL_SRV_VALID=
 
 #################### DIRECTORIES
 
