--- a/docker-compose-nginx-all.yml
+++ b/docker-compose-nginx-all.yml
@@ -292,6 +292,36 @@ services:
       # WatchTower
       - "com.centurylinklabs.watchtower.monitor-only=true"
 
+  # WireGuard Easy Server
+#  wireguardg-easy:
+#    container_name: wireguard-easy
+#    image: weejewel/wg-easy
+#    hostname: wireguard_easy
+#    networks:
+#      - ngproxy
+#    security_opt:
+#      - no-new-privileges:true
+#    ports:
+#      - $WIREGUARD_UDP_PORT:51820/udp # WireGuard
+#      - $WIREGUARD_TCP_PORT:51821/tcp # UI
+#    restart: always
+#    environment:
+#      - WG_HOST=$WIREGUARD_HOST # host
+#      - PASSWORD=$WIREGUARD_UI_PASSWORD # UI password
+#      - WG_PERSISTENT_KEEPALIVE=$WIREGUARD_KEEPALIVE
+#      - WG_DEFAULT_DNS=$WIREGUARD_DNS
+#    volumes:
+#      - '$SERVICESDIR/wireguard_easy:/etc/wireguard'
+#    cap_add:
+#      - NET_ADMIN
+#      - SYS_MODULE
+#    sysctls:
+#      - net.ipv4.ip_forward=$WIREGUARD_IP_FORWARD
+#      - net.ipv4.conf.all.src_valid_mark=$WIREGUARD_ALL_SRV_VALID
+##    labels:
+#      # WatchTower
+##      - "com.centurylinklabs.watchtower.monitor-only=true"
+
 ############################# MONITORING
 
   # Netdata - System monitoring
