--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,10 @@ NGINX_MYSQL_DATABASE=
 NGINX_MYSQL_USER=
 NGINX_MYSQL_PASSWORD=
 
+#################### CLOUDFLARED
+
+CLOUDFLARED_TOKEN_MAIN=
+
 #################### VPN
 
 OPENVPN_PROVIDER=
