--- a/docker-compose-nginx-all.yml
+++ b/docker-compose-nginx-all.yml
@@ -33,9 +33,9 @@ services:
       - "$PROXYDIR/nginxmanagerproxy/letsencrypt:/etc/letsencrypt"
     links:
       - nginxmanagerproxy_mariadb
-    labels:
-      # WatchTower
-      - "com.centurylinklabs.watchtower.monitor-only=true"
+#    labels:
+#      # WatchTower
+#      - "com.centurylinklabs.watchtower.monitor-only=true"
 
   # MariaDB
   nginxmanagerproxy_mariadb:
@@ -53,9 +53,9 @@ services:
       - MYSQL_DATABASE=$NGINX_MYSQL_DATABASE
       - MYSQL_USER=$NGINX_MYSQL_USER
       - MYSQL_PASSWORD=$NGINX_MYSQL_PASSWORD
-    labels:
-      # WatchTower
-      - "com.centurylinklabs.watchtower.monitor-only=true"
+#    labels:
+#      # WatchTower
+#      - "com.centurylinklabs.watchtower.monitor-only=true"
 
   # Cloudflare DDNS - Dynamic DNS Updater
   myownsite-cf-ddns:
@@ -86,6 +86,20 @@ services:
 #      - RRTYPE=A
 #      - DELETE_ON_STOP=false
 #      - DNS_SERVER=1.1.1.1
+
+  # Cloudflare tunnel: main site
+#  cloudflared:
+#    container_name: cloudflared_main
+#    image: cloudflare/cloudflared:latest
+#    networks:
+#      - ngproxy
+#    restart: always
+#    command:
+#      - tunnel
+#      - --no-autoupdate
+#      - run
+#      - --token
+#      - $CLOUDFLARED_TOKEN_MAIN
 
 ############################# SYSTEM
 
@@ -139,25 +153,25 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
 
   # Portainer - WebUI for Containers
-  portainer:
-    container_name: portainer
-    image: portainer/portainer-ce:latest
-    restart: always
-    command: --no-analytics # -H unix:///var/run/docker.sock
-    networks:
-      - ngproxy
-    security_opt:
-      - no-new-privileges:true
-    ports:
-      - "$PORTAINER_PORT:9000"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - $SERVICESDIR/portainer/data:/data 
-    environment:
-      - TZ=$TZ
-    labels:
-      # WatchTower
-      - "com.centurylinklabs.watchtower.monitor-only=true"
+#  portainer:
+#    container_name: portainer
+#    image: portainer/portainer-ce:latest
+#    restart: always
+#    command: --no-analytics # -H unix:///var/run/docker.sock
+#    networks:
+#      - ngproxy
+#    security_opt:
+#      - no-new-privileges:true
+#    ports:
+#      - "$PORTAINER_PORT:9000"
+#    volumes:
+#      - /var/run/docker.sock:/var/run/docker.sock:ro
+#      - $SERVICESDIR/portainer/data:/data 
+#    environment:
+#      - TZ=$TZ
+#    labels:
+#      # WatchTower
+#      - "com.centurylinklabs.watchtower.monitor-only=true"
 
   # WatchTower - Automatic Docker Container Updates
 #  watchtower:
@@ -276,138 +290,138 @@ services:
 
   # Guacamole
       # Create new user and delete default user
-  guacamole:
-    container_name: guacamole
-    image: oznu/guacamole:armhf
-    restart: always
-    networks:
-      - ngproxy
-    security_opt:
-      - no-new-privileges:true
-    ports:
-      - $GUACAMOLE_PORT:8080
-    volumes:
-      - '$SERVICESDIR/guacamole:/config'
-    labels:
-      # WatchTower
-      - "com.centurylinklabs.watchtower.monitor-only=true"
-
-  # WireGuard Easy Server
-#  wireguardg-easy:
-#    container_name: wireguard-easy
-#    image: weejewel/wg-easy
-#    hostname: wireguard_easy
+#  guacamole:
+#    container_name: guacamole
+#    image: oznu/guacamole:armhf
+#    restart: always
 #    networks:
 #      - ngproxy
 #    security_opt:
 #      - no-new-privileges:true
 #    ports:
-#      - $WIREGUARD_UDP_PORT:51820/udp # WireGuard
-#      - $WIREGUARD_TCP_PORT:51821/tcp # UI
-#    restart: always
-#    environment:
-#      - WG_HOST=$WIREGUARD_HOST # host
-#      - PASSWORD=$WIREGUARD_UI_PASSWORD # UI password
-#      - WG_PERSISTENT_KEEPALIVE=$WIREGUARD_KEEPALIVE
-#      - WG_DEFAULT_DNS=$WIREGUARD_DNS
+#      - $GUACAMOLE_PORT:8080
 #    volumes:
-#      - '$SERVICESDIR/wireguard_easy:/etc/wireguard'
-#    cap_add:
-#      - NET_ADMIN
-#      - SYS_MODULE
-#    sysctls:
-#      - net.ipv4.ip_forward=$WIREGUARD_IP_FORWARD
-#      - net.ipv4.conf.all.src_valid_mark=$WIREGUARD_ALL_SRV_VALID
-##    labels:
+#      - '$SERVICESDIR/guacamole:/config'
+#    labels:
 #      # WatchTower
-##      - "com.centurylinklabs.watchtower.monitor-only=true"
+#      - "com.centurylinklabs.watchtower.monitor-only=true"
+
+  # WireGuard Easy Server
+  wireguardg-easy:
+    container_name: wireguard-easy
+    image: weejewel/wg-easy:latest
+    hostname: wireguard_easy
+    networks:
+      - ngproxy
+    security_opt:
+      - no-new-privileges:true
+    ports:
+      - $WIREGUARD_UDP_PORT:51820/udp # WireGuard
+      - $WIREGUARD_TCP_PORT:51821/tcp # UI
+    restart: always
+    environment:
+      - WG_HOST=$WIREGUARD_HOST # wg server
+      - PASSWORD=$WIREGUARD_UI_PASSWORD # UI password
+      - WG_PERSISTENT_KEEPALIVE=$WIREGUARD_KEEPALIVE
+      - WG_DEFAULT_DNS=$WIREGUARD_DNS
+    volumes:
+      - '$SERVICESDIR/wireguard_easy:/etc/wireguard'
+    cap_add:
+      - NET_ADMIN
+      - SYS_MODULE
+    sysctls:
+      - net.ipv4.ip_forward=$WIREGUARD_IP_FORWARD
+      - net.ipv4.conf.all.src_valid_mark=$WIREGUARD_ALL_SRV_VALID
+#    labels:
+      # WatchTower
+#      - "com.centurylinklabs.watchtower.monitor-only=true"
 
 ############################# MONITORING
 
   # Netdata - System monitoring
-  netdata:
-    container_name: netdata
-    image: netdata/netdata:latest
-    hostname: $HOST_NAME # set to fqdn of host
-    restart: unless-stopped
-    networks:
-      - ngproxy
-    ports:
-      - $NETDATA_PORT:19999
-    cap_add:
-      - SYS_PTRACE
-    security_opt:
-      - apparmor:unconfined
-      - no-new-privileges:true
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    environment:
-      - PGID=$PGID
+#  netdata:
+#    container_name: netdata
+#    image: netdata/netdata:latest
+#    hostname: $HOST_NAME # set to fqdn of host
+#    restart: unless-stopped
+#    networks:
+#      - ngproxy
+#    ports:
+#      - $NETDATA_PORT:19999
+#    cap_add:
+#      - SYS_PTRACE
+#    security_opt:
+#      - apparmor:unconfined
+#      - no-new-privileges:true
+#    volumes:
+#      - /proc:/host/proc:ro
+#      - /sys:/host/sys:ro
+#      - /var/run/docker.sock:/var/run/docker.sock:ro
+#    environment:
+#      - PGID=$PGID
 
 ############################# NEXTCLOUD
 
   # References to "home" means the instance (in case there are more than one)
   
   # MariaDB NextCloud
-  nextcloud_home_mariadb:
-    container_name: nextcloud_home_mariadb
-    image: linuxserver/mariadb:latest
-    #command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
-    restart: always
-    networks:
-      - database
-    security_opt:
-      - no-new-privileges:true
-    ports:
-      - $NEXTCLOUDMARIADB:3306
-    volumes:
-      - $SERVICESDIR/nextcloud_mariadb/home/config:/config
-      - $SERVICESDIR/nextcloud_mariadb/home/mysql:/var/lib/mysql
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - PUID=$PUID
-      - PGID=$PGID
-      - MYSQL_ROOT_PASSWORD=$MARIADB_ROOT_PASSWORD_NEXTCLOUD
-      - MYSQL_DATABASE=$MARIADB_DATABASE_NEXTCLOUD
-      - MYSQL_USER=$MARIADB_USER_NEXTCLOUD
-      - MYSQL_PASSWORD=$MARIADB_PASSWORD_NEXTCLOUD
+#  nextcloud_home_mariadb:
+#    container_name: nextcloud_home_mariadb
+#    image: linuxserver/mariadb:latest
+#    #command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
+#    restart: always
+#    networks:
+#      - database
+#    security_opt:
+#      - no-new-privileges:true
+#    ports:
+#      - $NEXTCLOUDMARIADB:3306
+#    volumes:
+#      - $SERVICESDIR/nextcloud_mariadb/home/config:/config
+#      - $SERVICESDIR/nextcloud_mariadb/home/mysql:/var/lib/mysql
+#      - /etc/timezone:/etc/timezone:ro
+#      - /etc/localtime:/etc/localtime:ro
+#    environment:
+#      - PUID=$PUID
+#      - PGID=$PGID
+#      - MYSQL_ROOT_PASSWORD=$MARIADB_ROOT_PASSWORD_NEXTCLOUD
+#      - MYSQL_DATABASE=$MARIADB_DATABASE_NEXTCLOUD
+#      - MYSQL_USER=$MARIADB_USER_NEXTCLOUD
+#      - MYSQL_PASSWORD=$MARIADB_PASSWORD_NEXTCLOUD
 
   # Redis
-  nextcloud_home_redis:
-    container_name: nextcloud_home_redis
-    image: redis
-    restart: always
-    command: redis-server --requirepass $REDIS_PASSWORD_NEXTCLOUD
-    ports:
-      - $NEXTCLOUDREDIS:6379
-    networks:
-      - database
-    volumes:
-      - $SERVICESDIR/nextcloud_redis/home/redis/data:/data
+#  nextcloud_home_redis:
+#    container_name: nextcloud_home_redis
+#    image: redis
+#    restart: always
+#    command: redis-server --requirepass $REDIS_PASSWORD_NEXTCLOUD
+#    ports:
+#      - $NEXTCLOUDREDIS:6379
+#    networks:
+#      - database
+#    volumes:
+#      - $SERVICESDIR/nextcloud_redis/home/redis/data:/data
 
   # NextCloud
-  nextcloud_home:
-    container_name: nextcloud_home
-    image: nextcloud
-    networks:
-      - database
-      - ngproxy
-    restart: always
-    ports:
-      - $NEXTCLOUD:80
-    security_opt:
-      - no-new-privileges:true
-    links:
-      - nextcloud_home_mariadb
-    volumes:
-      - $SERVICESDIR/nextcloud/home:/var/www/html
-      - $NEXTCLOUDSTORAGEDIR/nextcloud_storage/home:/var/www/html/data
-    environment: 
-      - REDIS_HOST=nextcloud_home_redis
-      - REDIS_HOST_PASSWORD=$REDIS_PASSWORD_NEXTCLOUD
+#  nextcloud_home:
+#    container_name: nextcloud_home
+#    image: nextcloud
+#    networks:
+#      - database
+#      - ngproxy
+#    restart: always
+#    ports:
+#      - $NEXTCLOUD:80
+#    security_opt:
+#      - no-new-privileges:true
+#    links:
+#      - nextcloud_home_mariadb
+#    volumes:
+#      - $SERVICESDIR/nextcloud/home:/var/www/html
+#      - $NEXTCLOUDSTORAGEDIR/nextcloud_storage/home:/var/www/html/data
+#    environment: 
+#      - REDIS_HOST=nextcloud_home_redis
+#      - REDIS_HOST_PASSWORD=$REDIS_PASSWORD_NEXTCLOUD
 
 ############################# DASHBOARD
 
@@ -430,65 +444,65 @@ services:
       - TZ=$TZ
 
   # Heimdall Local - Unified Frontend Alternative
-  heimdall_local:
-    container_name: heimdall_local
-    image: linuxserver/heimdall:latest
-    restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
-    ports:
-      - "$HEIMDALL_LOCAL_PORT:80"
-    volumes:
-      - $SERVICESDIR/heimdall_local:/config
-    environment:
-      - PUID=$PUID
-      - PGID=$PGID
-      - TZ=$TZ
+#  heimdall_local:
+#    container_name: heimdall_local
+#    image: linuxserver/heimdall:latest
+#    restart: unless-stopped
+#    security_opt:
+#      - no-new-privileges:true
+#    ports:
+#      - "$HEIMDALL_LOCAL_PORT:80"
+#    volumes:
+#      - $SERVICESDIR/heimdall_local:/config
+#    environment:
+#      - PUID=$PUID
+#      - PGID=$PGID
+#      - TZ=$TZ
 
 ############################# MY OWN SITE VMENDIVIL.COM
 
   # MariaDB
-  myownsite_mariadb:
-    container_name: myownsite_mariadb
-    image: linuxserver/mariadb:latest
-    restart: always
-    networks:
-      - database
-    security_opt:
-      - no-new-privileges:true
-    ports:
-      - "$MYOWNSITE_MARIADB_PORT:3306"
-    volumes:
-      - $MYOWNSITEDIR/myownsite_mariadb/data:/config
-      - $MYOWNSITEDIR/myownsite_mariadb/mysql:/var/lib/mysql
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - PUID=$PUID
-      - PGID=$PGID
-      - MYSQL_ROOT_PASSWORD=$MARIADB_ROOT_PASSWORD
-      - MYSQL_DATABASE=$WORDPRESS_DB_NAME
-      - MYSQL_USER=$WORDPRESS_DB_USER
-      - MYSQL_PASSWORD=$WORDPRESS_DB_PASSWORD
+#  myownsite_mariadb:
+#    container_name: myownsite_mariadb
+#    image: linuxserver/mariadb:latest
+#    restart: always
+#    networks:
+#      - database
+#    security_opt:
+#      - no-new-privileges:true
+#    ports:
+#      - "$MYOWNSITE_MARIADB_PORT:3306"
+#    volumes:
+#      - $MYOWNSITEDIR/mariadb/data:/config
+#      - $MYOWNSITEDIR/mariadb/mysql:/var/lib/mysql
+#      - /etc/timezone:/etc/timezone:ro
+#      - /etc/localtime:/etc/localtime:ro
+#    environment:
+#      - PUID=$PUID
+#      - PGID=$PGID
+#      - MYSQL_ROOT_PASSWORD=$MARIADB_ROOT_PASSWORD
+#      - MYSQL_DATABASE=$WORDPRESS_DB_NAME
+#      - MYSQL_USER=$WORDPRESS_DB_USER
+#      - MYSQL_PASSWORD=$WORDPRESS_DB_PASSWORD
 
-  # PhpMyAdmin
-  myownsite_phpmyadmin:
-    image: ebspace/armhf-phpmyadmin
-    container_name: myownsite_phpmyadmin
-    restart: unless-stopped
-    networks:
-      - database
-    security_opt:
-      - no-new-privileges:true
-    ports:
-      - $MYOWNSITE_PHPMYADMIN:80
-    links:
-      - myownsite_mariadb
-    environment:
-      MYSQL_ROOT_PASSWORD: $MARIADB_ROOT_PASSWORD
-      PMA_HOST: myownsite_mariadb
-      PMA_PORT: 3306
-#      PMA_ARBITRARY: 1
+#  # PhpMyAdmin
+#  myownsite_phpmyadmin:
+#    image: ebspace/armhf-phpmyadmin
+#    container_name: myownsite_phpmyadmin
+#    restart: unless-stopped
+#    networks:
+#      - database
+#    security_opt:
+#      - no-new-privileges:true
+#    ports:
+#      - $MYOWNSITE_PHPMYADMIN:80
+#    links:
+#      - myownsite_mariadb
+#    environment:
+#      MYSQL_ROOT_PASSWORD: $MARIADB_ROOT_PASSWORD
+#      PMA_HOST: myownsite_mariadb
+#      PMA_PORT: 3306
+##      PMA_ARBITRARY: 1
     
   # WordPress
     # Create file (volumes) php.conf.uploads.ini and paste below content before container creation:
@@ -497,30 +511,30 @@ services:
     #upload_max_filesize = 64M
     #post_max_size = 64M
     #max_execution_time = 600
-  myownsite_wordpress:
-    container_name: myownsite_wordpress
-    image: wordpress:5.6
-    restart: always
-    networks:
-      - database
-      - ngproxy
-    security_opt:
-      - no-new-privileges:true
-    ports:
-      - $MYOWNSITE_WORDPRESS_PORT:80
-    links:
-      - myownsite_mariadb
-    volumes:
-      - $MYOWNSITEDIR/myownsite_wordpress/config/php.conf.uploads.ini:/usr/local/etc/php/conf.d/uploads.ini # Create file in advance
-      - $MYOWNSITEDIR/myownsite_wordpress/wp-app:/var/www/html # Full wordpress project
-    environment:
-      WORDPRESS_DB_HOST: myownsite_mariadb
-      WORDPRESS_DB_NAME: $WORDPRESS_DB_NAME
-      WORDPRESS_DB_USER: $WORDPRESS_DB_USER
-      WORDPRESS_DB_PASSWORD: $WORDPRESS_DB_PASSWORD
-    labels:
-      # WatchTower
-      - "com.centurylinklabs.watchtower.monitor-only=true"
+#  myownsite_wordpress:
+#    container_name: myownsite_wordpress
+#    image: wordpress:5.6
+#    restart: always
+#    networks:
+#      - database
+#      - ngproxy
+#    security_opt:
+#      - no-new-privileges:true
+#    ports:
+#      - $MYOWNSITE_WORDPRESS_PORT:80
+#    links:
+#      - myownsite_mariadb
+#    volumes:
+#      - $MYOWNSITEDIR/www/config/php.conf.uploads.ini:/usr/local/etc/php/conf.d/uploads.ini # Create file in advance
+#      - $MYOWNSITEDIR/www/wp-app:/var/www/html # Full wordpress project
+#    environment:
+#      WORDPRESS_DB_HOST: myownsite_mariadb
+#      WORDPRESS_DB_NAME: $WORDPRESS_DB_NAME
+#      WORDPRESS_DB_USER: $WORDPRESS_DB_USER
+#      WORDPRESS_DB_PASSWORD: $WORDPRESS_DB_PASSWORD
+#    labels:
+#      # WatchTower
+#      - "com.centurylinklabs.watchtower.monitor-only=true"
 
 ############################# BLOG 30LAMOD.COM
 
@@ -584,30 +598,30 @@ services:
 
   # Zoneminder
   # References to "home" means the instance (in case there are more than one)
-  zoneminder_home:
-    image: sgarzarella/zoneminder-armhf:latest
-    container_name: zoneminder_home
-    restart: unless-stopped
-    networks:
-      - ngproxy
-    security_opt:
-      - no-new-privileges:true
-    privileged: true
-    ports:
-      - $ZONEMINDER_PORT:80
-      - $ZONEMINDER_WEBSOCKET_PORT:9000
-    environment:
-      TZ: $TZ
-      SHMEM: "50%"
-      SSL_EVENTS: "1"
-      PUID: $PUID
-      PGID: $PGID
-    volumes:
-      - $SERVICESDIR/zoneminder/home:/config
-      - $ZMVIDEODIR/zoneminder_video/home:/var/cache/zoneminder
-    labels:
-      # WatchTower
-      - "com.centurylinklabs.watchtower.monitor-only=true"
+#  zoneminder_home:
+#    image: sgarzarella/zoneminder-armhf:latest
+#    container_name: zoneminder_home
+#    restart: unless-stopped
+#    networks:
+#      - ngproxy
+#    security_opt:
+#      - no-new-privileges:true
+#    privileged: true
+#    ports:
+#      - $ZONEMINDER_PORT:80
+#      - $ZONEMINDER_WEBSOCKET_PORT:9000
+#    environment:
+#      TZ: $TZ
+#      SHMEM: "50%"
+#      SSL_EVENTS: "1"
+#      PUID: $PUID
+#      PGID: $PGID
+#    volumes:
+#      - $SERVICESDIR/zoneminder/home:/config
+#      - $ZMVIDEODIR/zoneminder_video/home:/var/cache/zoneminder
+#    labels:
+#      # WatchTower
+#      - "com.centurylinklabs.watchtower.monitor-only=true"
 
   # Plex
   # <your-ip>:$PLEX_PORT/web
