--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,9 @@ NEXTCLOUDMARIADB=
 NEXTCLOUDREDIS=
 PORTAINER_PORT=
 STATPING_PORT=
-BLOG_MARIADB_PORT=
-BLOG_WORDPRESS_PORT=
-BLOG_WORDPRESS_SSL_PORT=
+WP_DEMO_MARIADB_PORT=
+WP_DEMO_WORDPRESS_PORT=
+WP_DEMO_WORDPRESS_SSL_PORT=
 TRANSMISSIONOPENVPN=
 TRANSMISSIONOPENVPNGUI=
 TRANSMISSIONOPENVPN_ONLYVPN=
@@ -24,7 +24,7 @@ TRANSMISSIONOPENVPNGUI_ONLYVPN=
 WIRESHARK_PORT=
 ZONEMINDER_PORT=
 ZONEMINDER_WEBSOCKET_PORT=
-PLEX_PORT=
+#PLEX_PORT=
 WIREGUARD_UDP_PORT=
 WIREGUARD_TCP_PORT=
 
@@ -76,7 +76,7 @@ PROXYDIR="/Docker/traefik2"
 SERVICESDIR="/Docker/traefik2services"
 
 MYOWNSITEDIR="/MyOwnSite"
-BLOGDIR="/Blog"
+WP_DEMO_DIR="/Demo"
 
 ZMVIDEODIR="/zoneminder_video"
 NEXTCLOUDSTORAGEDIR="/nextcloud_storage"
@@ -96,6 +96,7 @@ CLOUDFLARE_API_TOKEN=
 DOMAINNAME=yourdomain.com
 
 MARIADB_ROOT_PASSWORD=
+PHP_PMA_PORT=
 
 WORDPRESS_DB_NAME=
 WORDPRESS_DB_USER=
@@ -103,13 +104,13 @@ WORDPRESS_DB_PASSWORD=
 
 #################### SECOND DOMAIN
 
-DOMAINNAME_BLOG=anotherdomain.com
+WP_DEMO_DOMAIN=anotherdomain.com
 
-MARIADB_BLOG_ROOT_PASSWORD=
+WP_DEMO_ROOT_PASSWORD=
 
-WORDPRESS_BLOG_DB_NAME=
-WORDPRESS_BLOG_DB_USER=
-WORDPRESS_BLOG_DB_PASSWORD=
+WP_DEMO_DB_NAME=
+WP_DEMO_DB_USER=
+WP_DEMO_DB_PASSWORD=
 
 #################### GOOGLE OAUTH
 
