Cloudflare zero trust arm64 initial file

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-# General
+# .env files
 .env
-shared/.htpasswd
-
-# Traefik Exclude
-traefik2proxy/traefik.log
-traefik2proxy/letsencrypt/acme*
-traefik2proxy/rules/middlewares-chains.toml
-traefik2proxy/rules/middlewares.toml
-traefik2proxy/rules/service-openmediavault.toml
-
-# Traefik Include
-!traefik2proxy/letsencrypt/acme.json.example
-
-#Nignx Manager Exclude
-nginxmanagerproxy/
-
-#Nigx Manager Include
-!nginxmanagerproxy/config.json.example
+dockerhomeserver-zerotrust-arm64-v0.env
