--- a/dockerhomeserver-zerotrust-arm64-v1.yml
+++ b/dockerhomeserver-zerotrust-arm64-v1.yml
@@ -30,3 +30,27 @@ services:
 #      DOZZLE_FILTER: "label=log_me" # limits logs displayed to containers with this label
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
+############################# MEDIA
+
+  # Plex
+  # URL to access plex instance: http://<host ip>:$32400/web
+  plex:
+    image: linuxserver/plex:latest
+    container_name: plex
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    network_mode: host
+    environment:
+      PUID: $PUID
+      PGID: $PGID
+      VERSION: docker
+      #UMASK: 022
+      #PLEX_CLAIM: #optional: https://www.plex.tv/claim
+    volumes:
+      - $SERVICES_DIR/plex/config:/config
+      - $PLEX_MOVIES_HDD_ONE_DIR:/PlexMoviesAndShows_One
+      #- $PLEX_MOVIES_HDD_TWO_DIR:/movies_Hdd_Two
+    #devices:
+      #- /dev/dri:/dev/dri
