--- a/dockerhomeserver-zerotrust-arm64-v0.yml
+++ b/dockerhomeserver-zerotrust-arm64-v0.yml
@@ -144,6 +144,26 @@ services:
       - PGID=$PGID
       - TZ=$TZ
 
+  # Dashy
+  dashy:
+    container_name: dashy
+    image: lissy93/dashy:arm64v8
+    ports:
+      - $DASHY_PORT:80
+    restart: always
+    environment:
+      - NODE_ENV=$DASHY_NODE_ENV
+      - UID=$PUID
+      - GID=$PGID
+    volumes:
+      - $SERVICES_DIR/dashy/config.yml:/app/public/conf.yml # Create file in advance / mkdir dashy / touch config.yml
+    #healthcheck:
+      #test: ['CMD', 'node', '/app/services/healthcheck']
+      #interval: 1m30s
+      #timeout: 10s
+      #retries: 3
+      #start_period: 40s
+
 ############################# WORDPRESS SITE ONE
 
   # MariaDB
