--- a/dockerhomeserver-services-arm64-v1.yml
+++ b/dockerhomeserver-services-arm64-v1.yml
@@ -21,6 +21,33 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
+############################# NETWORK
+
+  # WireGuard Easy Server
+  wireguardg_easy:
+    container_name: wireguard_easy
+    image: weejewel/wg-easy:latest
+    hostname: wireguard_easy
+    security_opt:
+      - no-new-privileges:true
+    ports:
+      - $WIREGUARD_UDP_PORT:51820/udp # WireGuard
+      - $WIREGUARD_TCP_PORT:51821/tcp # UI
+    restart: always
+    environment:
+      - WG_HOST=$WIREGUARD_HOST # wg server
+      - PASSWORD=$WIREGUARD_UI_PASSWORD # UI password
+      - WG_PERSISTENT_KEEPALIVE=$WIREGUARD_KEEPALIVE
+      - WG_DEFAULT_DNS=$WIREGUARD_DNS
+    volumes:
+      - $SERVICES_DIR/wireguard_easy:/etc/wireguard
+    cap_add:
+      - NET_ADMIN
+      - SYS_MODULE
+    sysctls:
+      - net.ipv4.ip_forward=$WIREGUARD_IP_FORWARD
+      - net.ipv4.conf.all.src_valid_mark=$WIREGUARD_ALL_SRV_VALID
+
 ############################# MEDIA
 
   # Plex
