--- a/dockerhomeserver-services-arm64-v1.yml
+++ b/dockerhomeserver-services-arm64-v1.yml
@@ -48,6 +48,22 @@ services:
       - net.ipv4.ip_forward=$WIREGUARD_IP_FORWARD
       - net.ipv4.conf.all.src_valid_mark=$WIREGUARD_ALL_SRV_VALID
 
+  firefox:
+    image: linuxserver/firefox:latest
+    container_name: firefox
+    restart: unless-stopped
+    ports:
+      - $FIREFOX_PORT:3000
+    security_opt:
+      - no-new-privileges:true
+    environment:
+      - PUID=$PUID
+      - PGID=$PGID
+      - TZ=$TZ
+    volumes:
+      - $SERVICES_DIR/firefox/config:/config
+    shm_size: $FIREFOX_SHM_SIZE
+
 ############################# MEDIA
 
   # Plex
