Added Plex stack on its own yml file to avoid deployment issues

--- a/dockerhomeserver-services-arm64-v1.yml
+++ b/dockerhomeserver-services-arm64-v1.yml
@@ -48,42 +48,18 @@ services:
       - net.ipv4.ip_forward=$WIREGUARD_IP_FORWARD
       - net.ipv4.conf.all.src_valid_mark=$WIREGUARD_ALL_SRV_VALID
 
-  firefox:
-    image: linuxserver/firefox:latest
-    container_name: firefox
-    restart: unless-stopped
-    ports:
-      - $FIREFOX_PORT:3000
-    security_opt:
-      - no-new-privileges:true
-    environment:
-      - PUID=$PUID
-      - PGID=$PGID
-      - TZ=$TZ
-    volumes:
-      - $SERVICES_DIR/firefox/config:/config
-    shm_size: $FIREFOX_SHM_SIZE
-
-############################# MEDIA
-
-  # Plex
-  # URL to access plex instance: http://<host ip>:$32400/web
-  plex:
-    image: linuxserver/plex:latest
-    container_name: plex
-    restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
-    network_mode: host
-    environment:
-      PUID: $PUID
-      PGID: $PGID
-      VERSION: docker
-      #UMASK: 022
-      #PLEX_CLAIM: #optional: https://www.plex.tv/claim
-    volumes:
-      - $SERVICES_DIR/plex/config:/config
-      - $PLEX_MOVIES_HDD_ONE_DIR:/PlexMoviesAndShows_One
-      #- $PLEX_MOVIES_HDD_TWO_DIR:/movies_Hdd_Two
-    #devices:
-      #- /dev/dri:/dev/dri
+#  firefox:
+#    image: linuxserver/firefox:latest
+#    container_name: firefox
+#    restart: unless-stopped
+#    ports:
+#      - $FIREFOX_PORT:3000
+#    security_opt:
+#      - no-new-privileges:true
+#    environment:
+#      - PUID=$PUID
+#      - PGID=$PGID
+#      - TZ=$TZ
+#    volumes:
+#      - $SERVICES_DIR/firefox/config:/config
+#    shm_size: $FIREFOX_SHM_SIZE
