Adding NordVpn config to transmission container

--- a/dockerhomeserver-services-arm64-v0.yml
+++ b/dockerhomeserver-services-arm64-v0.yml
@@ -49,6 +49,10 @@ services:
       - OPENVPN_USERNAME=$TRANSMISSIONOPENVPN_USERNAME
       - OPENVPN_PASSWORD=$TRANSMISSIONOPENVPN_PASSWORD
       - OPENVPN_OPTS=--inactive 3600 --ping 10 --ping-exit 60 # Restart if connection fails
+      - NORDVPN_COUNTRY=$TRANSMISSIONOPENVPN_NORDVPN_COUNTRY
+      - NORDVPN_CATEGORY=$TRANSMISSIONOPENVPN_NORDVPN_CATEGORY
+      - NORDVPN_PROTOCOL=$TRANSMISSIONOPENVPN_NORDVPN_PROTOCOL
+      # Local network
       - LOCAL_NETWORK=$TRANSMISSIONOPENVPN_LOCAL_NETWORK # Match the local network of the host device
       - PUID=$PUID
       - PGID=$PGID
