--- a/dockerhomeserver-services-arm64-v0.yml
+++ b/dockerhomeserver-services-arm64-v0.yml
@@ -1,4 +1,17 @@
-version: "3.8"
+version: "3.9"
+
+networks:
+
+  dockervlan:
+    name: dockervlan
+    driver: macvlan
+    driver_opts:
+      parent: eth0 # using ifconfig
+    ipam:
+      config:
+        - subnet: $DOCKERVLAN_SUBNET
+          ip_range: $DOCKERVLAN_IP_RANGE
+          gateway: $DOCKERVLAN_GATEWAY
 
 services:
 
@@ -22,6 +35,32 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
 
 ############################# NETWORK
+
+  # AdGuard Home - DNS AdBlocking
+  # https://www.smarthomebeginner.com/adguard-home-docker-compose-guide/
+  adguardhome:
+    container_name: adguardhome
+    image: adguard/adguardhome
+    security_opt:
+      - no-new-privileges:true
+    restart: unless-stopped
+    # profiles: ["core", "all"]
+    networks:
+      dockervlan:
+        ipv4_address: $ADGUARDHOME_IPV4_ADDRESS
+    ports:
+      - 53/udp 
+      - 67/udp 
+      - 68/tcp 
+      - 68/udp 
+      - 80/tcp 
+      - 443/tcp 
+      - 853/tcp 
+      - 3000/tcp 
+    volumes:
+      - $SERVICES_DIR/adguard/conf:/opt/adguardhome/conf 
+      - $SERVICES_DIR/adguard/work:/opt/adguardhome/work 
+      #- $DOCKERDIR/shared/certs/$DOMAINNAME_HOME_SYNOLOGY:/certs
 
   transmission_openvpn:
     image: haugene/transmission-openvpn:3.0.2-armhf #latest-armhf / 2.13-armhf / 3.0.2-armhf
