--- a/dockerhomeserver-nextcloud-arm64-v0.yml
+++ b/dockerhomeserver-nextcloud-arm64-v0.yml
@@ -5,8 +5,10 @@ services:
 ############################# NEXTCLOUD
 
   # Nextcloud
+  # https://docs.linuxserver.io/images/docker-nextcloud/
+  # https://hub.docker.com/r/linuxserver/nextcloud
   nextcloud:
-    image: linuxserver/nextcloud
+    image: linuxserver/nextcloud:27.1.3 # 27.0.2-ls268
     container_name: nextcloud
     restart: always
     ports:
