--- a/dockerhomeserver-nextcloud-arm64-v0.yml
+++ b/dockerhomeserver-nextcloud-arm64-v0.yml
@@ -20,21 +20,21 @@ services:
       - PGID=$PGID
       - TZ=$TZ
       # Database
-      #- MYSQL_HOST=nextcloud_mariadb
-      #- MYSQL_DATABASE=$NEXTCLOUD_MYSQL_DATABASE
-      #- MYSQL_USER=$NEXTCLOUD_MYSQL_USER
-      #- MYSQL_PASSWORD=$NEXTCLOUD_MYSQL_PASSWORD
+      - MYSQL_HOST=nextcloud_mariadb
+      - MYSQL_DATABASE=$NEXTCLOUD_MYSQL_DATABASE
+      - MYSQL_USER=$NEXTCLOUD_MYSQL_USER
+      - MYSQL_PASSWORD=$NEXTCLOUD_MYSQL_PASSWORD
       # Redis
-      #- REDIS_HOST=nextcloud_redis
-      #- REDIS_PORT=$NEXTCLOUD_REDIS_PORT
-      #- REDIS_HOST_PASSWORD=$NEXTCLOUD_REDIS_PASSWORD
+      - REDIS_HOST=nextcloud_redis
+      - REDIS_PORT=$NEXTCLOUD_REDIS_PORT
+      - REDIS_HOST_PASSWORD=$NEXTCLOUD_REDIS_PASSWORD
       # Domains
-      #- TRUSTED_PROXIES=$NEXTCLOUD_TRUSTEDPROXIES
-      #- NEXTCLOUD_TRUSTED_DOMAINS=$NEXTCLOUD_TRUSTEDDOMAINS
+      - TRUSTED_PROXIES=$NEXTCLOUD_TRUSTEDPROXIES
+      - NEXTCLOUD_TRUSTED_DOMAINS=$NEXTCLOUD_TRUSTEDDOMAINS
     volumes:
       - $NEXTCLOUD_DATA_DIR:/data
       - $NEXTCLOUD_DIR/server/config:/config
-      - $NEXTCLOUD_DIR/server/app:/var/www/html
+      #- $NEXTCLOUD_DIR/server/app:/var/www/html
     depends_on:
       - nextcloud_mariadb
       - nextcloud_redis
