Updated DNS to AdGuard Home DNS

--- a/dockerhomeserver-services-arm64-v0.yml
+++ b/dockerhomeserver-services-arm64-v0.yml
@@ -38,7 +38,7 @@ services:
 
   # AdGuard Home - DNS AdBlocking
   # https://www.smarthomebeginner.com/adguard-home-docker-compose-guide/
-  # Run to create bridge between host and macvlan, and run on every OS reboot/restart:
+  # Run to create bridge between host and macvlan, and run on every OS reboot/restart, change ip addresses as needed:
   #     sudo ip link add dns_bridge_vlan link eth0 type macvlan mode bridge && sudo ip addr add 192.168.1.16/32 dev dns_bridge_vlan && sudo ip link set dns_bridge_vlan up && sudo ip route add 192.168.1.15/32 dev dns_bridge_vlan
   adguardhome:
     container_name: adguardhome
@@ -71,8 +71,9 @@ services:
     cap_add:
       - NET_ADMIN
     dns:
-      - 8.8.8.8
-      - 8.8.4.4
+      #- 8.8.8.8
+      #- 8.8.4.4
+      - $ADGUARDHOME_IPV4_ADDRESS
     ports:
       - $TRANSMISSIONOPENVPN_GUI_PORT:9091 # GUI
       - $TRANSMISSIONOPENVPN_PORT:8888 # Transmission Port
@@ -124,6 +125,7 @@ services:
         max-size: 10m
 
   # WireGuard Easy Server
+  # On config files, ensure port matches the one set on WIREGUARD_UDP_PORT
   wireguardg_easy:
     container_name: wireguard_easy
     image: weejewel/wg-easy:latest
@@ -138,7 +140,7 @@ services:
       - WG_HOST=$WIREGUARD_HOST # wg server
       - PASSWORD=$WIREGUARD_UI_PASSWORD # UI password
       - WG_PERSISTENT_KEEPALIVE=$WIREGUARD_KEEPALIVE
-      - WG_DEFAULT_DNS=$WIREGUARD_DNS
+      - WG_DEFAULT_DNS=$ADGUARDHOME_IPV4_ADDRESS
     volumes:
       - $SERVICES_DIR/wireguard_easy:/etc/wireguard
     cap_add:
