--- a/dockerhomeserver-services-arm64-v0.yml
+++ b/dockerhomeserver-services-arm64-v0.yml
@@ -168,7 +168,7 @@ services:
   # Dashy
   dashy:
     container_name: dashy
-    image: lissy93/dashy:arm64v8
+    image: lissy93/dashy:latest # arm64v8
     ports:
       - $DASHY_PORT:80
     restart: always
