--- a/dockerhomeserver-services-arm64-v1.yml
+++ b/dockerhomeserver-services-arm64-v1.yml
@@ -63,3 +63,27 @@ services:
 #    volumes:
 #      - $SERVICES_DIR/firefox/config:/config
 #    shm_size: $FIREFOX_SHM_SIZE
+
+############################# FILE SYSTEM
+
+  # Syncthing
+  syncthing:
+    image: lscr.io/linuxserver/syncthing:latest
+    container_name: syncthing
+    hostname: syncthing
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    ports:
+      - $SYNCTHING_UI:8384
+      - $SYNCTHING_TCP:22000/tcp
+      - $SYNCTHING_UDP:22000/udp
+      - $SYNCTHING_UDP_DISCOVERY:21027/udp
+    environment:
+      - PUID=$PUID
+      - PGID=$PGID
+      - TZ=$TZ
+    volumes:
+      - $SERVICES_DIR/syncthing/config:/config
+      #- /path/to/data1:/data1
+      #- /path/to/data2:/data2
