--- a/dockerhomeserver-syncthing-arm64-v0.yml
+++ b/dockerhomeserver-syncthing-arm64-v0.yml
@@ -24,5 +24,5 @@ services:
       - TZ=$TZ
     volumes:
       - $SERVICES_DIR/syncthing/config:/config # In-app, change default folder to /config/Sync under Actions >> Settings >> Edit folder defaults
-      #- /path/to/data2:/data1
+      - $SYNCTHING_DATA1:/SyncData1
       #- /path/to/data2:/data2
